--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,5 @@
 %% -*- mode: erlang -*-
 {erl_opts, [debug_info]}.
-{plugins, [{coveralls, {git, "https://github.com/markusn/coveralls-erl", "master"}}]}.
 
 {post_hooks, []}.
 
@@ -27,7 +26,5 @@
                       {top_level_readme,
                        {"./README.md",
                         "https://github.com/deadtrickster/accept"}}]}]},
-            {benchmark, [{src_dirs, ["src", "benchmark"]},
-                         {deps, [{'erlang-color',
-                                  {git, "https://github.com/julianduque/erlang-color",
-                                   {branch, "master"}}}]}]}]}.
+            {test, [{plugins, [{coveralls, "1.4.0"},
+                               {rebar3_elvis_plugin, "0.0.4"}]}]}]}.
