--- a/rebar.config
+++ b/rebar.config
@@ -29,4 +29,4 @@
             {test, [{plugins, [{coveralls, "1.4.0"},
                                {rebar3_elvis_plugin, "0.0.4"}]}]}]}.
 
-{plugins, [{rebar3_archive_plugin, "0.0.2"}]}.
+{project_plugins, [{rebar3_archive_plugin, "0.0.2"}]}.
